@@ -172,6 +172,8 @@ secure_log_date_format = %b %e
 	graph_0 = 2, 3
 	graph_1 = 1, 6
 	graph_2 = 16, 18, 19, 20, 21, 22
+	<alerts>
+	</alerts>
 </hptemp>
 
 
